work/peer1/kickstart/install/etc/firewall.conf
# Generated by iptables-save v1.3.6 on Thu Feb 18 18:48:47 2010
*filter
:INPUT DROP [113:8965]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i ! eth0 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 66.135.45.161/28
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 64.34.160.96/29
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 72.51.32.0/32
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 66.135.45.96/29
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 64.34.160.0/24
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 64.34.248.155/32
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 66.135.45.0/24
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 209.15.254.16/29
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 64.69.87.224/27
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 69.28.192.116
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 192.168.0.0/16
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 66.223.56.0/23
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 216.65.65.26/32
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 216.87.0.195/32
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 83.222.224.8/32
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 83.222.224.128/27
-A INPUT -p tcp -m multiport -j ACCEPT -i eth0 --dports 80,443 -s 79.121.222.41/32
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -p tcp -m tcp --dport 873 -j ACCEPT 
-A FORWARD -i eth0 -o ! eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i ! eth0 -o eth0 -j ACCEPT 
-A FORWARD -j LOG 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o ! eth0 -j ACCEPT 
-A OUTPUT -p icmp -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 162 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 162 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 161 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 161 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 873 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 389 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 636 -j ACCEPT 
COMMIT
# Completed on Thu Feb 18 18:48:47 2010
# Generated by iptables-save v1.3.6 on Thu Feb 18 18:48:47 2010
*nat
:PREROUTING ACCEPT [126:9876]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Thu Feb 18 18:48:47 2010
# Generated by iptables-save v1.3.6 on Thu Feb 18 18:48:47 2010
*mangle
:PREROUTING ACCEPT [48122:4705139]
:INPUT ACCEPT [45581:2400441]
:FORWARD ACCEPT [2541:2304698]
:OUTPUT ACCEPT [157200:403546098]
:POSTROUTING ACCEPT [159571:405362668]
COMMIT
# Completed on Thu Feb 18 18:48:47 2010
